--- a/package.json
+++ b/package.json
@@ -8,13 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.13",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.0",
     "next": "10.0.3",
     "postcss": "^8.2.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "tailwindcss": "^2.0.1"
+    "tailwindcss": "^2.0.1",
+    "tailwindcss-multi-theme": "^1.0.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.10",
